--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
         "@nestjs/passport": "^10.0.2",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/swagger": "^7.1.14",
+        "@types/cors": "^2.8.17",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/nodemailer": "^6.4.14",
         "bybit-api": "^3.9.8",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
         "cripto": "^1.1.4",
         "dotenv": "^16.3.1",
         "jsonwebtoken": "^9.0.2",
